# cloudflare-turnstile-solver

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/decompiler/flow/: analysis.rs  mod.rs
src/deobfuscator/: mod.rs
src/deobfuscator/transformers/: control_flow_flattening.rs  mod.rs  normalize_conditionals.rs  numbers.rs  proxy_functions.rs  sequence_expressions.rs  strings.rs  useless_if.rs
src/disassembler/: disassemble.rs  instructions.rs  mod.rs
src/parser/: functions.rs  magic_bits.rs  mod.rs  offset.rs  payload.rs  utils.rs  vm.rs
src/reverse/: compress.rs  encryption.rs  lz.rs  mod.rs  rsa_encryption.rs  xtea.rs
src/solver/: challenge.rs  keys.rs  mod.rs  performance.rs  task.rs  task_client.rs  user_fingerprint.rs  utils.rs  vm_parser.rs
src/solver/entries/: audio.rs  browser_data.rs  browser_keys.rs  browser_keys_base.json  computed_style.rs  css.rs  div_render_time.rs  document.rs  document_object_checks.rs  element_parent_checks.rs  emoji_os_check.rs  engine_behavior.rs  eval_error.rs  html_render.rs  image.rs  language.rs  math.rs  mod.rs  pat.rs  performance.rs  performance_memory.rs  pow.rs  pow_click.rs  selenium.rs  stack.rs  static_value.rs  tampering_plugins.rs  timezone.rs  unknown_hashes.rs  user_agent_data.rs  user_prefs_battery.rs  web_gl.rs  web_gl_native_fn_checks.rs  worker_performance_timing.rs
src/solver/timezone/: mod.rs
