[package]
name = "cf"
version = "0.1.0"
edition = "2024"

[dependencies]
oxc_allocator = "0.62.0"
oxc_ast = "0.62.0"
oxc_ast_visit = "0.62.0"
oxc_parser = "0.62.0"
oxc_semantic = "0.62.0"
oxc_span = "0.62.0"

petgraph = "0.8.1"
rustc-hash = "2.0.0"

base64 = "0.22.1"
strum = { version = "0.27.1", features = ["derive"] }

serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
rquest = { version = "5.1.0", features = [
    "cookies",
    "brotli",
    "gzip",
    "stream",
    "json",
] }
anyhow = "1.0.98"
rquest-util = "2.2.0"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
once_cell = "1.21.3"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
png = "0.18.0-rc"
async-trait = "0.1.88"
url = "2.5.4"
num = "0.4.3"
sha2 = "0.11.0-pre.5"
hex = "0.4.3"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
regex = "1.11.1"
flate2 = "1.1.1"
brotli = "8.0.0"
zstd = "0.13.3"
maxminddb = "0.26.0"
byteorder = "1.5.0"
